plan.html updated

--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -144,6 +144,7 @@
     background-color: #5596E6;
     color: white;
 }
+
 .c-button::before{
     content: '';
     pointer-events: none;
@@ -232,14 +233,14 @@ th{
                 </tr>
                 <tr>
                   <th scope="row" style="text-align: left;">Live Video Calling</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
               <tr>
                   <th scope="row" style="text-align: left;">Live Audio Calling</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -247,7 +248,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Live Chat</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -255,7 +256,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Real Time Collaborative Coding</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -263,8 +264,8 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">24/7 Support Discord Server Access</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
@@ -308,7 +309,7 @@ th{
                                             </p>
                                             <p class="c-field">
                                               Cost<br>
-                                              <span>₹{{object.get_discounted_price}}</span>
+                                              <span>₹{{object.get_discounted_price}} /month</span>
                                             </p>
                                             <p class="c-field">
                                               Duration<br>
