--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -233,14 +233,14 @@ th{
                 </tr>
                 <tr>
                   <th scope="row" style="text-align: left;">Live Video Calling</th>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
               <tr>
                   <th scope="row" style="text-align: left;">Live Audio Calling</th>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -248,7 +248,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Live Chat</th>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -256,7 +256,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Real Time Collaborative Coding</th>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -264,8 +264,8 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">24/7 Support Discord Server Access</th>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
-                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
@@ -273,9 +273,9 @@ th{
                 <tr>
                   <th scope="row" style="text-align: left;"></th>
                   <th></th>
-                  <th>₹250</th>
-                  <th>₹500</th>
-                  <th>₹1000</th>
+                  <th>₹250/month</th>
+                  <th>₹500/month</th>
+                  <th>₹1000/month</th>
                 </tr>
 
                 <tr>
