plan.html updated

--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -233,14 +233,14 @@ th{
                 </tr>
                 <tr>
                   <th scope="row" style="text-align: left;">Live Video Calling</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
               <tr>
                   <th scope="row" style="text-align: left;">Live Audio Calling</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -248,7 +248,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Live Chat</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -256,7 +256,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Real Time Collaborative Coding</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -264,7 +264,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">24/7 Support Discord Server Access</th>
-                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
