plan.html and home.html updated

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -243,7 +243,7 @@ i.fa.fa-chevron-down{
 <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
 <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
                                <p style="color:#fff">A Stellar AI code-room is a unique SaaS of Stellar AI, which has a exciting environment where one can do real time live collaborative coding with anyone you are friends with on the Stellar AI Ecosystem. Every code-room has an owner/admin. Once you find a user/connection on the Ecosystem you have to send that person a friend request add that person a friend then you can add them in your particular owned code-room and start with your real time coding , data science , algorithm making , etc. It is the most user-friendly way to connect any national and international users and grow together. It also has real time audio calls, video calls and chatting making it more user-friendly</p>
-                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Learning<span></span></a>
+                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Real Time Live Collaborative Coding<span></span></a>
 
 
 
@@ -300,7 +300,7 @@ i.fa.fa-chevron-down{
                                 <h2 class="title text-primary">AI SKELETON CODES
                                 </h2>
                                 <p style="color:#fff">An environment where Machine Learning and Deep Learning professionals/students can directly use filters and get the basic skeleton code and then edit it further for the project requirement</p>
-                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Learning <span></span></a>
 
                             </div>
                         </div>
