--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -212,7 +212,7 @@ th{
                   <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">Free</th>
                   <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">Basic</th>
                   <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">Premium</th>
-                  <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">Enterprice</th>
+                  <th scope="col" style="background: #103783;color: #fff;width: 17.5%;">Enterprise</th>
                 </tr>
 
                 <tr>
