plan.html cost updated

--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -315,7 +315,7 @@ th{
                                             </p>
                                             <p class="c-field">
                                               Cost<br>
-                                              <span>₹{{object.cost}}</span>
+                                              <span>₹{{object.get_discounted_price}}</span>
                                             </p>
                                             <p class="c-field">
                                               Duration<br>
