--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -38,7 +38,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Steller AI</title>
+    <title>Stellar AI</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,6 +108,7 @@
             <div class="sticky-header main-bar-wraper navbar-expand-lg">
                 <div class="main-bar clearfix ">
                     <div class="container clearfix">
+                        <!-- website logo -->
                         <div class="logo-header pt-2 pb-0 mostion" style="width: 180px">
                             <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/home-logo.png' %}"  style="width: 200px" class="p-0"></a>
 <!--                            <p>Stellar AI</p>-->
@@ -292,8 +293,8 @@
                             <div class="widget widget_services border-0">
                                 <h5 class="footer-title">Policy</h5>
                                 <ul>
-{#                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>#}
-{#                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>#}
+<!--                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>-->
+<!--                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>-->
                                     <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
                                     <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
                                 </ul>
