--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -752,7 +752,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="col-auto" title="Buy new plan" onclick="get_plan_id()">
+                                                <div class="col-auto" id="show-buy-plan-btn" style="display: none;" title="Buy new plan" onclick="get_plan_id()">
                                                     <div class="btn btn-sm btn-primary">
                                                         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg> -->
                                                         Buy this plan
