disable code room for expired coderoom

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -1003,6 +1003,8 @@
 
                                 </div>
                             </div>
+
+                            <h1 style="text-align: center; display: none" id="show-expired-quote">Coderoom is expired!</h1>
                         </div>
                         <!-- Chat: Content -->
 
