days left remaining functionality

--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -1000,7 +1000,7 @@
                                 </div>
                             </div>
 
-                            <h1 style="text-align: center; display: none" id="chatPanel-username">Coderoom is expired!</h1>
+                            <h1 style="text-align: center; display: none" id="show-expired-quote">Coderoom is expired!</h1>
 
                         </div>
                         <!-- Chat: Content -->
