days left remaining functionality

--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -18,7 +18,7 @@
         $('#sender_img_preview_id').prop("src",user_img_url);
         $('#chatPanel-username').text(groupTitleName);
         $('#show_left_days_div').show();
-        $('#days_left').text(`${daysRemaining} days remaining`);
+        $('#days_left').text(`${daysRemaining}`);
         {# Modal Body#}
         $('#receiver_group_image_url').prop("src", user_img_url);
         $('#receiver_group_name').text(groupTitleName);
