--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -182,7 +182,7 @@
                         <div class="field">
                             <label>Username</label>
                             <div class="control">
-                                <input type="text" class="input" name="username" id="username" required onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your username">
+                                <input type="text" class="input" name="username" id="username" required onchange="unlockNextBtn(event, this, 0, 'stepbtn0')" onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your username">
                                 <label id="username_warning" style="display: none; color: red"></label>
                             </div>
                         </div>
@@ -241,7 +241,7 @@
                         <div class="field">
                             <label>Password</label>
                             <div class="control">
-                                <input type="password" name="password1" onkeyup="unlockNextBtn(event, this, 2, 'stepbtn2')" minlength="8"  class="input" placeholder="Choose a password" required>
+                                <input type="password" name="password1"  onkeyup="unlockNextBtn(event, this, 2, 'stepbtn2')" minlength="8"  class="input" placeholder="Choose a password" required>
                             </div>
                         </div>
                         <div class="field">
