profile photo compulsory

--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -212,6 +212,7 @@
                                 <input name="profile_image" id="profile_image" onkeyup="unlockNextBtn(event, this, 1, 'stepbtn1')"  type="file" accept="image/*" alt="" style="display: none;">
                             </div>
                             <div class="limitation">
+                                <label>*Image is compulsory.</label>
                                 <small>Only images with a size lower than 3MB are allowed.</small>
                             </div>
                         </div>
