plan expired data

--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -66,6 +66,11 @@
             $('#show-expired-quote').show();
             $('#show-buy-plan-btn').show();
         }
+        else{
+            $('#show-expired-quote').hide();
+            $('#show-buy-plan-btn').hide();
+        }
+
         // For mobiles
         document.querySelector('main.main').classList.add('is-visible')
     }
