--- a/users/templates/users/user_register.html
+++ b/users/templates/users/user_register.html
@@ -1,8 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-
 <!-- Mirrored from friendkit.cssninja.io/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Oct 2021 14:42:19 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
@@ -10,7 +8,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-
     <title> Stellar AI | Sign Up</title>
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}"/>
     <!-- Fonts -->
@@ -20,7 +17,6 @@
     <link rel="stylesheet" href="{% static 'assets/css/app.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/core.css' %}">
 </head>
-
 <body>
     <form method="post" id="registerForm" enctype="multipart/form-data">
         {% csrf_token %}
@@ -35,13 +31,11 @@
     <div class="pageloader"></div>
     <div class="infraloader is-active"></div>
     <div class="signup-wrapper">
-
         <div class="fake-nav" style="height: 60px;">
             <a href="/" class="logo">
                 <img src="{% static 'images/logo/color-logo.png' %}" style="width: 70px;" alt="">
             </a>
         </div>
-
         <div class="process-bar-wrap">
             <div class="process-bar">
                 <div class="progress-wrap">
@@ -65,7 +59,6 @@
                 </div>
             </div>
         </div>
-
        <!-- Messages -->
     <style>
         .custom-alert{
@@ -142,12 +135,8 @@
         {% endfor %}
     </div>
     {% endif %}
-
-
-
         <div class="outer-panel">
             <div class="outer-panel-inner">
-
                 <a class="button button-tertiary is-flex is-justify-content-center my-4 mx-auto" style="max-width: 300px;" href="{% url "user:social:begin" "google-oauth2" %}">
                     <div class="is-align-self-center" style="width: 15px; height: 15px; display: inline-block;">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 326667 333333" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd"><path d="M326667 170370c0-13704-1112-23704-3518-34074H166667v61851h91851c-1851 15371-11851 38519-34074 54074l-311 2071 49476 38329 3428 342c31481-29074 49630-71852 49630-122593m0 0z" fill="#4285f4"/><path d="M166667 333333c44999 0 82776-14815 110370-40370l-52593-40742c-14074 9815-32963 16667-57777 16667-44074 0-81481-29073-94816-69258l-1954 166-51447 39815-673 1870c27407 54444 83704 91852 148890 91852z" fill="#34a853"/><path d="M71851 199630c-3518-10370-5555-21482-5555-32963 0-11482 2036-22593 5370-32963l-93-2209-52091-40455-1704 811C6482 114444 1 139814 1 166666s6482 52221 17777 74814l54074-41851m0 0z" fill="#fbbc04"/><path d="M166667 64444c31296 0 52406 13519 64444 24816l47037-45926C249260 16482 211666 1 166667 1 101481 1 45185 37408 17777 91852l53889 41853c13520-40185 50927-69260 95001-69260m0 0z" fill="#ea4335"/></svg>
@@ -156,15 +145,11 @@
                         &nbsp;Sign up in with Google
                     </span>
                 </a>
-
                 <div class="process-title mt-3">
                     <h2 id="step-title-1" class="step-title is-active">Tell us more about you.</h2>
                     <h2 id="step-title-3" class="step-title">Customize your profile.</h2>
                     <h2 id="step-title-5" class="step-title">Secure your account.</h2>
                 </div>
-
-
-
                 <div id="signup-panel-1" class="process-panel-wrap is-active is-narrow">
                     <div class="form-panel">
                         <div class="field">
@@ -182,8 +167,7 @@
                         <div class="field">
                             <label>Username</label>
                             <div class="control">
-                                <input type="text" class="input" name="username" id="username" required onchange="unlockNextBtn(event, this, 0, 'stepbtn0')" onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your username">
-                                <label id="username_warning" style="display: none; color: red"></label>
+                                <input type="text" class="input" name="username" required onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your username">
                             </div>
                         </div>
                         <div class="field">
@@ -192,15 +176,12 @@
                                 <input type="email" id="email" class="input" name="email" required onkeyup="unlockNextBtn(event, this, 0, 'stepbtn0')" placeholder="Enter your email address">
                             </div>
                         </div>
-
                     </div>
-
                     <div class="buttons">
                         <a class="button process-button" style="margin-right: auto;" href="{% url 'home:home' %}">&#8592; Home</a>
                         <a class="button disabled process-button is-next" id="stepbtn0" data-step="step-dot-2" disabled>Next</a>
                     </div>
                 </div>
-
                 <div id="signup-panel-3" class="process-panel-wrap is-narrow">
                     <div class="form-panel">
                         <div class="photo-upload">
@@ -212,7 +193,6 @@
                                 <input name="profile_image" id="profile_image" onkeyup="unlockNextBtn(event, this, 1, 'stepbtn1')"  type="file" accept="image/*" alt="" style="display: none;">
                             </div>
                             <div class="limitation">
-                                <label>*Image is compulsory.</label>
                                 <small>Only images with a size lower than 3MB are allowed.</small>
                             </div>
                         </div>
@@ -230,19 +210,17 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="buttons">
                         <a class="button process-button" data-step="step-dot-1">Back</a>
                         <a class="button process-button is-next" id="stepbtn1" data-step="step-dot-3" disabled>Next</a>
                     </div>
                 </div>
-
                 <div id="signup-panel-5" class="process-panel-wrap is-narrow">
                     <div class="form-panel">
                         <div class="field">
                             <label>Password</label>
                             <div class="control">
-                                <input type="password" name="password1"  onkeyup="unlockNextBtn(event, this, 2, 'stepbtn2')" minlength="8"  class="input" placeholder="Choose a password" required>
+                                <input type="password" name="password1" onkeyup="unlockNextBtn(event, this, 2, 'stepbtn2')" minlength="8"  class="input" placeholder="Choose a password" required>
                             </div>
                         </div>
                         <div class="field">
@@ -258,18 +236,13 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="buttons">
                         <a class="button process-button" data-step="step-dot-2">Back</a>
                         <button type="submit" class="button" id="stepbtn2" style="background-color: #5596e6; color: white;" disabled>Sign Up</button>
                     </div>
                 </div>
-
             </div>
         </div>
-
-
-
         <!--Edit Credit card Modal-->
         <div id="crop-modal" class="modal is-small crop-modal is-animated">
             <div class="modal-background"></div>
@@ -285,7 +258,6 @@
                     </header>
                     <div class="modal-card-body">
                         <div id="cropper-wrapper" class="cropper-wrapper">
-
                         </div>
                     </div>
                 </div>
@@ -293,29 +265,23 @@
         </div>
     </div>
    </form>
-
-
     <!-- Concatenated js plugins and jQuery -->
     <script src="{% static 'assets/js/app.js' %}"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script src="{% static 'assets/data/tipuedrop_content.js' %}"></script>
-
     <!-- Core js -->
     <script src="{% static 'assets/js/global.js' %}"></script>
-
     <!-- Navigation options js -->
     <script src="{% static 'assets/js/navbar-v1.js' %}"></script>
     <script src="{% static 'assets/js/navbar-v2.js' %}"></script>
     <script src="{% static 'assets/js/navbar-mobile.js' %}"></script>
     <script src="{% static 'assets/js/navbar-options.js' %}"></script>
     <script src="{% static 'assets/js/sidebar-v1.js' %}"></script>
-
     <!-- Core instance js -->
     <script src="{% static 'assets/js/main.js' %}"></script>
     <script src="{% static 'assets/js/chat.js' %}"></script>
     <script src="{% static 'assets/js/touch.js' %}"></script>
     <script src="{% static 'assets/js/tour.js' %}"></script>
-
     <!-- Components js -->
     <script src="{% static 'assets/js/explorer.js' %}"></script>
     <script src="{% static 'assets/js/widgets.js' %}"></script>
@@ -323,38 +289,22 @@
     <script src="{% static 'assets/js/popovers-users.js' %}"></script>
     <script src="{% static 'assets/js/popovers-pages.js' %}"></script>
     <script src="{% static 'assets/js/lightbox.js' %}"></script>
-
     <!-- Landing page js -->
-
     <!-- Signup page js -->
     <script src="{% static 'assets/js/signup.js' %}"></script>
-
     <!-- Feed pages js -->
-
     <!-- profile js -->
-
     <!-- stories js -->
-
     <!-- friends js -->
-
     <!-- questions js -->
-
     <!-- video js -->
-
     <!-- events js -->
-
     <!-- news js -->
-
     <!-- shop js -->
-
     <!-- inbox js -->
-
     <!-- settings js -->
-
     <!-- map page js -->
-
     <!-- elements page js -->
-
     <!-- Custom Scripts -->
     <script>
     {
@@ -372,9 +322,7 @@
                 previewEl.src = oldImage;
                 previewEl.style.display = 'inline-block';
             }
-
         });
-
         $('#registerForm').on('submit', function (e) {
             const formData = new FormData(document.getElementById('registerForm'));
             // if (formData.get('phone_number').length != 10){
@@ -395,7 +343,6 @@
             }
             return true;
         })
-
         // Holds the fields from different pages
         const page_arr = [
             [
@@ -421,17 +368,8 @@
                     document.getElementById(nextBtnId).setAttribute('disabled', true);
                     return
                 }
-                let user = $('#username').val();
-                if(user.split(" ").length > 1){
-                    document.getElementById(nextBtnId).setAttribute('disabled', true);
-                    $('#username_warning').text("Username must not contain any space");
-                    $('#username_warning').show();
-                    return
-                }
             }
             document.getElementById(nextBtnId).removeAttribute('disabled');
-            $('#username_warning').hide();
-
         }
     }
     </script>
@@ -441,7 +379,5 @@
         }
     </style>
 </body>
-
-
 <!-- Mirrored from friendkit.cssninja.io/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Oct 2021 14:42:32 GMT -->
 </html>
