register page testing

--- a/users/templates/users/oauth_register.html
+++ b/users/templates/users/oauth_register.html
@@ -246,7 +246,7 @@
             }
             else {
                 $('#username_warning').hide();
-                $('#registerForm').submit();
+                $('#registerForm').unbind('submit').submit();
 
             }
         });
